[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
log = "0.4.14"
lambda_runtime = "0.4"
format = "0.2.4"
# tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"